fix slider on mobile (#493)
* fix slider on mobile

* fix margin slider

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -221,6 +221,9 @@ html, body, .map, .map-wrapper, #map-container {
     .panel-wrapper {
         width: 100%;
     }
+    .ui-slider-horizontal {
+        margin-left: 50px !important;
+    }
 }
 
 .green {
